--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mini-bid",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server NODE_ENV='development'"
+    "start": "webpack | webpack-dev-server --mode development"
   },
   "keywords": [],
   "author": "Lawrence",
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.1",
+    "html-webpack-plugin": "^4.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass-loader": "^9.0.3",
